# gst_base_tutorial

./: BT01HelloGst.c  BT05GuiToolkit.c  BT06Caps.c  CMakeLists.txt  README.md
src/: BT02Concepts.c  BT03DynamicPads.c  BT04Seeking.c  av_record.cpp  h264_encode.cpp  playbinuse.c  record.cpp  rtsp_server.cpp
